release/v1.0/KNOWN_LIMITATIONS.ja.md
---
lang: ja
slug: known-limitations
order: 50
title: "既知の制約"
---

# 既知の制約

本ページは v1.0 の利用境界を説明します。単なる不具合一覧ではなく、どの質問を直接確認でき、どの質問を公式ソースまたは内部手順で確認すべきかを判断するためのものです。

## 1. 公式標準の代替ではありません

SDTM Pedia は参照支援ツールです。規制当局提出、標準解釈、用語バージョン確認、重要なマッピング判断では、CDISC 刊行物、NCI EVS、ライセンスされた MedDRA 資料、規制要件、内部 SOP を使用してください。

## 2. リアルタイムの外部更新は保証されません

本リリースは、公開時点で整理された知識範囲を反映しています。新しい CDISC バージョン、Pinnacle 21 ルール更新、Dataset-JSON の状況、外部データベース変更などは、該当する公式ソースを確認してください。

## 3. 長尾の統制用語は公式確認が必要な場合があります

非常に大きい codelist や長尾の questionnaire 用語は、すべてのプラットフォームで完全展開されているわけではありません。この場合、よい回答は境界を明示し、未確認の完全リストを生成するのではなく、NCI EVS などの権威あるソースに戻るよう案内します。

## 4. プラットフォームごとに回答スタイルが異なります

Claude、ChatGPT、Gemini、NotebookLM は、回答スタイル、引用表示、慎重さが異なります。NotebookLM はアップロード済み資料により近い回答をする傾向があります。他のプラットフォームは説明や要約に向きますが、人による判断は必要です。

## 5. 組織内部ルールは対象外です

スポンサー、CRO、データ標準チームには、内部マッピング規約、Define-XML 実務、Reviewers Guide の書き方、品質フローがある場合があります。SDTM Pedia は標準確認を支援しますが、これらの規約を置き換えません。

## 6. 人によるレビューが必要な場面

以下は人による確認を推奨します。

- 正式提出のデータ構造または変数マッピングに影響する判断。
- 医学コーディング、重篤な有害事象、死亡、中止など重要な臨床概念。
- プロジェクト固有の CRF、SAP、データ管理計画、スポンサー標準。
- 根拠が明確でない回答、またはチーム標準と矛盾する回答。

明らかな誤りや不足を見つけた場合は、質問、プラットフォーム、回答、期待される根拠を記録し、メンテナーに共有してください。
